<resources>
    <string name="btServerMode">Server</string>
    <string name="btClientMode">Client</string>
    <string name="btSingleUserMode">Single User</string>
    <string name="discoverDevices">Discover Devices</string>
    <string name="btSelectModePrompt">Select Bluetooth Mode:</string>

    <string name="all">All</string>
    <string name="app_name">Hot Bridge</string>
    <string name="back">Back</string>
    <string name="bid">Bid</string>
    <string name="biddingQuiz">Bidding Quiz</string>
    <string name="bidSearch">Bid Search</string>
    <string name="deal">Deal</string>
    <string name="detail">Detail</string>
    <string name="east">East</string>
    <string name="iconClub">\u2663</string>
    <string name="iconDiamond">\u2662</string>
    <string name="iconHeart">\u2661</string>
    <string name="iconSpade">\u2660</string>
    <string name="me">Me</string>
    <string name="menuTwoPlayer">2-player</string>
    <string name="north">North</string>
    <string name="quiz">Quiz</string>
    <string name="randomDeal">Random Deal</string>
    <string name="reviseQuizActivity">ReviseQuizActivity</string>
    <string name="setCurrentIndex">Set Current Index</string>
    <string name="setTargetCorrects">Set Target Corrects</string>
    <string name="south">South</string>
    <string name="us">Us</string>
    <string name="west">West</string>
    <string name="question">question</string>
    <string name="answer">answer</string>

</resources>
