<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	    
		    <Button
	            android:id="@+id/dealButton"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/deal" />
	    	
			<FrameLayout
			    android:id="@+id/northContainer"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="40dp"
			    android:layout_marginStart="40dp" />
		</LinearLayout>
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:baselineAligned="false" >
	    
	        <FrameLayout
		        android:id="@+id/westContainer"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content" />
		    
		    <FrameLayout
		        android:id="@+id/eastContainer"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content" />
		</LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/handsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/us" />
                <Button
                    android:id="@+id/bidButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bid" />
            </LinearLayout>
	    
		    <FrameLayout
		        android:id="@+id/southContainer"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
			    android:layout_marginLeft="50dp"
			    android:layout_marginStart="50dp" />
		</LinearLayout>
		
	    <TextView
	        android:id="@+id/suggestedBidtextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	
	        <TextView
	            style="@style/CardText"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/west"
	            android:textStyle="italic" />
	
	        <TextView
	            style="@style/CardText"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/north"
	            android:textStyle="italic" />
	
	        <TextView
	            style="@style/CardText"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/east"
	            android:textStyle="italic" />
	
	        <TextView
	            style="@style/CardText"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/south"
	            android:textStyle="italic" />

	    </LinearLayout>
	
	    <LinearLayout
		    android:id="@+id/bid1Layout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" />
	    <LinearLayout
		    android:id="@+id/bid2Layout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" />
	    <LinearLayout
		    android:id="@+id/bid3Layout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" />
	    <LinearLayout
		    android:id="@+id/bid4Layout"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" />
	    <!-- 
	    <TableView
		    android:id="@+id/tableView"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" />
	     -->
	    
	</LinearLayout>

</ScrollView>