<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/playerTitle"
            style="@style/CardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/playerHCP"
            style="@style/CardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/CardText"
	        android:text="@string/iconSpade" />
	    <TextView
	        android:id="@+id/spades"
	        style="@style/CardText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            style="@style/RedIcon"
	        android:text="@string/iconHeart" />
	    <TextView
	        android:id="@+id/hearts"
	        style="@style/CardText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/RedIcon"
	        android:text="@string/iconDiamond" />
	    <TextView
	        android:id="@+id/diamonds"
	        style="@style/CardText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView
	        style="@style/CardText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/iconClub" />
	    <TextView
	        android:id="@+id/clubs"
	        style="@style/CardText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />
	</LinearLayout>

</LinearLayout>